# redscript-bot

./: Cargo.toml
src/: main.rs
